@@ -1,6 +1,10 @@
 ChangeLog for PyLint
 ====================
 
+  --
+    * fix disable-checker option so that it won't accidentally enable the
+      rpython checker which is disabled by default
+    
 2007-03-02  --  0.13.1
     * fix some unexplained 0.13.0 packaging issue which led a bunch of
       files missing from the distribution
